--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="./bundle.js"></script>
     </head>
 <body>
-<h1>My photo albums app</h1>
+<h1>Linode Object Storage Demo</h1>
 <!-- <div id="viewer"></div> -->
 <div id="app"></div>
 <!-- <br> -->
@@ -20,4 +20,7 @@
     <!-- <script src="./jquery.js"></script> -->
     <!-- <script src="./script.js"></script> -->
 </body>
+<script>
+    listfolders();
+</script>
 </html>
